// This is the public API offered by the shopping cart entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/api/httpbody.proto";

package com.example.stateless.shoppingcart;

option go_package = "tck/stateless/shoppingcart";

message AddLineItem {
    string user_id = 1;
    string product_id = 2;
    string name = 3;
    int32 quantity = 4;
}

message ItemAdded {
    string productId = 1;
    string name = 2;
    int32 quantity = 3;
}

service ShoppingCart {
    rpc AddItem(AddLineItem) returns (ItemAdded) {
        option (google.api.http) = {
            post: "/cart/{user_id}/items/add",
            body: "*",
        };
    }

    rpc AddItemStreamIn(stream AddLineItem) returns (ItemAdded) {
        option (google.api.http) = {
            post: "/streamin/cart/{user_id}/items/add",
            body: "*",
        };
    }

    rpc AddItemStreamOut(AddLineItem) returns (stream ItemAdded) {
        option (google.api.http) = {
            post: "/streamout/cart/{user_id}/items/add",
            body: "*",
        };
    }

    rpc AddItemStreamed(stream AddLineItem) returns (stream ItemAdded) {
        option (google.api.http) = {
            post: "/streamed/cart/{user_id}/items/add",
            body: "*",
        };
    }
}
